--- a/index.html
+++ b/index.html
@@ -196,7 +196,11 @@ Você escreve. Ele responde. Não com frases prontas, mas com perguntas, devolut
 </p>
 </div>
 </div>
-</section>
+</section><div class="section-cta">
+<a class="cta-btn" href="https://wa.me/5561991229512" target="_blank" rel="noopener noreferrer">
+Agende sua sessão no WhatsApp
+</a>
+</div>
 
 <!-- GALERIA -->
 <section class="section">
@@ -321,6 +325,7 @@ if (e.key === "Escape") hideModal();
 </script>
 </body>
 </html>
+
 
 
 
