--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com
 CRP 01/21617 · Atendimento online · +14.000 atendimentos
 </div><div class="hero-cta">
 <a class="cta-btn" href="https://wa.me/5561991229512" target="_blank" rel="noopener noreferrer">
-Agende sua sessão no WhatsApp
+Agende uma Sessão
 </a>
 </div>
 </div>
@@ -198,7 +198,7 @@ Você escreve. Ele responde. Não com frases prontas, mas com perguntas, devolut
 </div>
 </section><div class="section-cta">
 <a class="cta-btn" href="https://wa.me/5561991229512" target="_blank" rel="noopener noreferrer">
-Agende sua sessão no WhatsApp
+Agende uma Sessão
 </a>
 </div>
 
@@ -325,6 +325,7 @@ if (e.key === "Escape") hideModal();
 </script>
 </body>
 </html>
+
 
 
 
