--- a/index.html
+++ b/index.html
@@ -8,330 +8,157 @@
 <title>Psicólogo em Brasília - Maycon Barboza — Psicólogo, Psicanalista, Sexólogo & Educador</title>
 <meta name="description" content="Psicólogo e Psicanalísta em Brasília. Atendimento online com foco em vínculos, transtornos de humor, sexualidade e saúde mental. Conheça o trabalho de Maycon Barboza.">
 
-<!-- AQUI em vez do <style> entra só o link -->
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
 <div class="wrap">
 <div class="card">
 
-<!-- HERO -->
+<!-- 🔹 NAV SUPERIOR (ABAS) -->
+<nav class="top-nav">
+  <a href="#quem">Quem é Maycon Barboza</a>
+  <a href="#como-trabalha">Como trabalha</a>
+  <a href="#modalidades">Modalidades de Sessão</a>
+  <a href="#formacao">Formação Analítica</a>
+  <a href="#analista-reativo">Analista Reativo</a>
+  <a href="https://SUA_LOJA_AQUI" target="_blank" rel="noopener">E-books</a>
+</nav>
+
+<!-- 🔹 HERO -->
 <header class="hero">
-<div>
-<h1>Psicólogo e Psicanalista Maycon Barboza</h1>
-<div class="lead">
-Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
-</div>
-<div class="meta">
-CRP 01/21617 · Atendimento online · +14.000 atendimentos
-</div><div class="hero-cta">
-<a class="cta-btn" href="https://wa.me/5561991229512" target="_blank" rel="noopener noreferrer">
-Agende uma Sessão
-</a>
-</div>
-</div>
-<img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza">
+  <div>
+    <h1>Psicólogo e Psicanalista Maycon Barboza</h1>
+    <div class="lead">
+      Psicólogo, Psicanalista, Sexólogo e Educador — Saúde Mental integrativa com foco em vínculos, transtornos de humor e sexualidade.
+    </div>
+    <div class="meta">
+      CRP 01/21617 · Atendimento online · +14.000 atendimentos
+    </div>
+
+    <div class="hero-cta">
+      <a class="cta-btn" href="https://wa.me/5561991229512" target="_blank">
+      Agende uma Sessão
+      </a>
+    </div>
+  </div>
+
+  <img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza">
 </header>
 
-<!-- QUEM É -->
-<section class="section">
+
+<!-- 🔹 QUEM É -->
+<section class="section" id="quem">
 <h2>Quem é Maycon Barboza</h2>
+
 <p class="muted">
-<strong>Brasiliense, pai, determinado e sonhador.</strong> Formado em Psicologia pelo IESB, Maycon construiu sua trajetória combinando estudo intenso, experiência clínica e envolvimento constante com a formação de novos profissionais. Especialista em psicanálise clínica, sexualidade humana, transtornos de humor e transtorno bipolar, atua também com hipnoterapia e outras abordagens integrativas.
+<strong>Brasiliense, pai, determinado e sonhador.</strong> Formado em Psicologia pelo IESB, Maycon construiu sua trajetória combinando estudo intenso, experiência clínica e envolvimento constante com a formação de novos profissionais.
 </p>
+
 <p class="muted">
-Desde 2016, realizou mais de 14 mil atendimentos em diferentes contextos, acolhendo pessoas em sofrimento emocional, casais em crise, famílias em conflito e profissionais em supervisão. É presença ativa nas redes sociais pelo perfil <strong>@terapeutamaycon</strong>, onde compartilha reflexões sobre vínculos, sofrimento psíquico e saúde mental de forma ética, acessível e responsável.
+Desde 2016, realizou mais de 14 mil atendimentos em diferentes contextos, acolhendo pessoas em sofrimento emocional, casais em crise, famílias em conflito e profissionais em supervisão.
 </p>
-<a
-href="https://instagram.com/terapeutamaycon"
-target="_blank"
-class="instagram-btn"
-rel="noopener noreferrer"
->
-Ver Instagram do Maycon Barboza
-</a>
+
+<a href="https://instagram.com/terapeutamaycon" class="instagram-btn" target="_blank">Ver Instagram</a>
 </section>
 
-<!-- COMO TRABALHA + FOTO LATERAL -->
-<section class="section two-col">
+
+<!-- 🔹 COMO TRABALHA -->
+<section class="section two-col" id="como-trabalha">
 <div>
-<h2>Como Trabalha</h2>
-<p class="muted">
-O trabalho clínico de Maycon Barboza é sustentado por uma escuta psicanalítica profunda, aliada a uma postura ética e realista. Cada paciente é recebido como alguém único, com história, tempo e limites próprios, e não como um “caso” a ser encaixado em rótulos prontos.
-</p>
-<p class="muted">
-Quando necessário, integra recursos como hipnoterapia, intervenções breves, orientação psicoeducativa e supervisão de rede de apoio, sempre avaliando o que faz sentido para aquela pessoa naquele momento. As principais demandas atendidas envolvem vínculos afetivos, solidão, transtornos de humor, lutos, sexualidade, conflitos familiares, questões de identidade e sofrimento relacionado ao trabalho.
-</p>
-<p class="muted">
-O objetivo não é apenas aliviar sintomas, mas favorecer mudanças estruturais: compreender repetições, nomear o que dói, elaborar experiências e construir novas formas de se relacionar consigo, com o outro e com o mundo.
-</p>
+<h2>Como trabalha</h2>
+<p class="muted">Escuta clínica profunda, ética e centrada no sujeito — não no diagnóstico.</p>
+<p class="muted">Integra Psicanálise, Hipnose, Supervisão, Estratégias Psicoeducativas e outras abordagens conforme a demanda.</p>
+<p class="muted">Trabalha especialmente com vínculos, solidão, luto, sexualidade, depressão e repetições emocionais.</p>
 </div>
-<img id="sideImg" class="side-photo" src="" alt="Maycon em contexto clínico">
+
+<img id="sideImg" class="side-photo" src="" alt="Maycon em consultório">
 </section>
 
-<!-- MODALIDADES DE ATENDIMENTO -->
-<section class="section">
-<h2>Modalidades de Atendimento</h2>
-<p class="muted">
-Conheça as principais formas de cuidado disponíveis. Para saber valores, converse com a Assistente Yara no canto inferior da tela.
-</p>
+
+<!-- 🔹 MODALIDADES -->
+<section class="section" id="modalidades">
+<h2>Modalidades de Sessão</h2>
+<p class="muted">Conheça as opções de acompanhamento psicológico.</p>
 
 <div class="services">
-<details class="service">
-<summary>Triagem psicológica</summary>
-<p>A triagem é o primeiro passo. É uma conversa estruturada para mapear suas queixas, sua história e o que você está buscando. A partir dela, Maycon avalia se o melhor caminho é psicoterapia, psicanálise, hipnoterapia, encaminhamento médico ou outros recursos.</p>
-<p>É obrigatória antes de iniciar qualquer processo terapêutico, porque garante cuidado, direção e segurança para o trabalho clínico.</p>
-</details>
-
-<details class="service">
-<summary>Psicoterapia</summary>
-<p>Espaço de fala e escuta para trabalhar sofrimento emocional, ansiedade, depressão, conflitos de relacionamento, decisões de vida e crises em geral. Acontece por meio de encontros regulares, em clima de acolhimento e confidencialidade.</p>
-<p>O objetivo é ampliar consciência, desenvolver recursos de enfrentamento e produzir mudanças concretas no modo de viver e se relacionar.</p>
-</details>
-
-<details class="service">
-<summary>Análise (Psicanálise)</summary>
-<p>Processo mais aprofundado, voltado para o inconsciente e para aquilo que se repete na sua vida sem que você entenda bem o porquê. A associação livre é o eixo do trabalho: falar sem censura para permitir que algo novo apareça.</p>
-<p>Não é técnica de relaxamento: é um caminho de confronto consigo mesmo, para deixar de “dormir na vida” e assumir o próprio desejo.</p>
-</details>
-
-<details class="service">
-<summary>Hipnoterapia</summary>
-<p>Uso clínico da hipnose como ferramenta complementar. Ajuda a acessar conteúdos profundos, ressignificar experiências e aliviar sintomas ligados a traumas, fobias, hábitos e dores emocionais.</p>
-<p>É conduzida de forma ética e segura, com foco em ampliar a consciência e favorecer mudanças duradouras.</p>
-</details>
-
-<details class="service">
-<summary>Terapia de casal</summary>
-<p>Atendimento conjunto para casais que desejam compreender a dinâmica da relação, reduzir conflitos e reconstruir confiança. O foco é trabalhar comunicação, acordos, responsabilidade de cada um e a história do vínculo.</p>
-<p>Ajuda o casal a sair de ciclos repetitivos de briga, silêncio ou afastamento, favorecendo decisões mais conscientes sobre permanecer, transformar ou encerrar a relação.</p>
-</details>
-
-<details class="service">
-<summary>Orientação parental</summary>
-<p>Voltada a pais, mães ou responsáveis que enfrentam dificuldades com limites, comportamento, rotina e diálogo com crianças ou adolescentes.</p>
-<p>O objetivo é oferecer novas estratégias educativas e de comunicação, fortalecendo a presença parental e a construção de vínculos mais seguros.</p>
-</details>
-
-<details class="service">
-<summary>Sexualidade</summary>
-<p>Acompanhamento de questões ligadas à vida sexual e afetiva: dificuldade de desejo, prazer, excitação, orgasmo, bloqueios e conflitos conjugais relacionados à sexualidade.</p>
-<p>O trabalho considera aspectos emocionais, corporais e relacionais, sem moralismo, com respeito à singularidade de cada história.</p>
-</details>
-
-<details class="service">
-<summary>Supervisão de casos clínicos</summary>
-<p>Espaço para psicólogos, estagiários e recém-formados discutirem casos, dúvidas técnicas e posicionamento ético. Ajuda a sustentar o lugar de terapeuta com mais segurança.</p>
-<p>Inclui discussão de casos, elaboração de hipóteses, treino de intervenções e reflexão sobre a própria prática clínica.</p>
-</details>
-
-<details class="service">
-<summary>Atendimento online assíncrono</summary>
-<p>Modalidade em que terapeuta e paciente não precisam estar conectados ao mesmo tempo. A comunicação acontece por áudios ou mensagens de texto, em dias combinados.</p>
-<p>É uma forma moderna de acompanhamento para quem tem rotina mais flexível ou prefere se expressar por escrito ou por áudios ao longo da semana.</p>
-</details>
-
-<details class="service">
-<summary>Avaliação psicológica</summary>
-<p>Processo estruturado que envolve entrevistas e, quando necessário, aplicação de testes psicológicos para compreender funcionamento emocional, cognitivo e comportamental.</p>
-<p>Pode ser utilizada para fins clínicos, cirúrgicos, educacionais ou jurídicos (como bariátrica, vasectomia, laqueadura, TDAH, entre outros).</p>
-</details>
-
-<details class="service">
-<summary>Palestras e cursos</summary>
-<p>Atividades psicoeducativas para escolas, empresas e eventos. Trabalham temas como saúde mental, vínculos, emoções, comunicação e prevenção ao adoecimento psíquico.</p>
-<p>Podem ser desenhadas sob medida para a demanda da instituição, sempre com linguagem acessível e embasamento técnico.</p>
-</details>
-
-<details class="service">
-<summary>Formação em Psicanálise Clínica</summary>
-<p>A formação livre em psicanálise clínica é indicada para quem quer aprender sobre psicanálise, seja para atuar como psicanalista futuramente, pesquisar ou aprimorar a sua prática profissional.</p>
-</details>
+<details class="service"><summary>Triagem</summary><p>Avaliação inicial e direcionamento.</p></details>
+<details class="service"><summary>Psicoterapia</summary><p>Processo clínico contínuo.</p></details>
+<details class="service"><summary>Psicanálise</summary><p>Investigação do inconsciente e repetições.</p></details>
+<details class="service"><summary>Hipnoterapia</summary><p>Reestruturação emocional e traumas.</p></details>
+<details class="service"><summary>Terapia de Casal</summary><p>Reconstrução de diálogo e vínculo.</p></details>
+<details class="service"><summary>Sexualidade</summary><p>Desejo, bloqueios, prazer, corpo.</p></details>
+<details class="service"><summary>Parentalidade</summary><p>Apoio a mães e pais.</p></details>
+<details class="service"><summary>Supervisão</summary><p>Para psicólogos e estudantes.</p></details>
 </div>
 </section>
 
-<!-- E-BOOK (só link) -->
-<section class="section">
-<h2>E-book da Formação</h2>
-<p class="muted">
-Visão geral da formação livre em Psicanálise Clínica (39 meses — Instituto LivreMent).
-</p>
+
+<!-- 🔹 FORMAÇÃO / EBOOK -->
+<section class="section" id="formacao">
+<h2>Formação Analítica</h2>
+<p class="muted">Formação livre em Psicanálise Clínica — 39 meses.</p>
+
 <div class="ebook-actions">
-<a class="ebook-link-btn" href="ebook.pdf" target="_blank" rel="noopener">
-Abrir e-book (tela cheia)
-</a>
-</div>
-<div class="ebook-note">
-Se preferir, você pode salvar o arquivo no seu dispositivo para ler com mais calma.
+<a class="ebook-link-btn" href="ebook.pdf" target="_blank">Abrir e-book</a>
 </div>
 </section>
 
-<!-- ANALISTA REATIVO -->
-<section class="section">
+
+<!-- 🔹 ANALISTA REATIVO -->
+<section class="section" id="analista-reativo">
 <h2>Analista Reativo — Apoio Entre Sessões</h2>
 
 <div class="ar-box">
-<img src="analista-reativo.jpg" class="ar-img" alt="Representação reflexiva do Analista Reativo">
+<img src="analista-reativo.jpg" class="ar-img">
 
 <div>
-<p class="muted">
-O <strong>Analista Reativo</strong> é um recurso baseado em Inteligência Artificial treinado com o estilo clínico, a escuta e a forma de levantar reflexões do Maycon Barboza. Ele existe para te acompanhar entre uma sessão e outra.
-</p>
-
-<p class="muted">
-Você escreve. Ele responde. Não com frases prontas, mas com perguntas, devolutivas e provocações internas, como um espaço de continência quando algo acontece e o próximo encontro ainda não chegou.
-</p>
-
-<p class="muted">
-É útil quando surge uma angústia no meio da semana, um pensamento que não te larga, um conflito que precisa ser elaborado ou uma questão que você deseja refletir antes da sessão.
-</p>
-
-<p class="muted">
-<strong>Não é terapia e não substitui o processo clínico.</strong><br>
-É IA. Uma extensão do trabalho, um apoio psíquico para manter o pensamento vivo.
-</p>
-
-<p class="muted" style="margin-top:10px;">
-<strong>Acesso Exclusivo Para Pacientes.</strong>
-</p>
+<p class="muted">Companhia emocional entre sessões, IA com estilo clínico de Maycon.</p>
+<p class="muted"><strong>Não substitui terapia.</strong> Simula devolutivas, perguntas e reflexão.</p>
+<p class="muted">Uso exclusivo para pacientes.</p>
 </div>
 </div>
-</section><div class="section-cta">
-<a class="cta-btn" href="https://wa.me/5561991229512" target="_blank" rel="noopener noreferrer">
-Agende uma Sessão
-</a>
+</section>
+
+<div class="section-cta">
+<a class="cta-btn" href="https://wa.me/5561991229512" target="_blank">Agende uma Sessão</a>
 </div>
 
-<!-- GALERIA -->
+
+<!-- 🔹 GALERIA -->
 <section class="section">
 <h2>Imagens</h2>
 <div class="gallery">
-<div class="gimg"><img id="g1" alt="Maycon foto 1"></div>
-<div class="gimg"><img id="g2" alt="Maycon foto 2"></div>
-<div class="gimg"><img id="g3" alt="Maycon foto 3"></div>
+<div class="gimg"><img id="g1"></div>
+<div class="gimg"><img id="g2"></div>
+<div class="gimg"><img id="g3"></div>
 </div>
 </section>
 
 </div>
 
-<footer>
-<a id="privacyOpen" style="text-decoration:underline;cursor:pointer">Política de privacidade</a> · @terapeutamaycon
-</footer>
+<footer><a id="privacyOpen" style="cursor:pointer">Política de privacidade</a> · @terapeutamaycon</footer>
 </div>
 
-<!-- MODAL PRIVACIDADE -->
-<div id="modalBackdrop" class="modal-backdrop"></div>
-<div
-id="privacyModal"
-class="modal"
-role="dialog"
-aria-modal="true"
-aria-labelledby="privacyTitle"
->
-<button
-id="closeModal"
-style="position:absolute;right:12px;top:8px;font-size:1.1rem;border:none;background:none;cursor:pointer"
-aria-label="Fechar"
->
-✕
-</button>
-<h3 id="privacyTitle">Política de Privacidade</h3>
-<p class="muted">
-Os dados informados são utilizados apenas para contato e retorno de mensagens. Não são vendidos ou compartilhados com terceiros.
-</p>
-</div>
 
-<!-- Balão de indicação do chat no mobile -->
-<div class="iara-hint">
-💬 Fale com a Yara
-</div>
-
-<!-- YARA (Watson Assistant) -->
+<!-- 🔹 SCRIPTS & CHAT WATSON -->
 <script>
-window.watsonAssistantChatOptions = {
-integrationID: "6f4c306d-a746-496f-b2c1-0ecf69b69af3",
-region: "us-south",
-serviceInstanceID: "99b8a9c7-7e40-4178-965d-4b0ded28035a",
-onLoad: async (instance) => {
-await instance.render();
-if (window.innerWidth > 900) {
-// só abre automático em telas maiores
-setTimeout(() => {
-try {
-instance.openWindow();
-} catch (e) {}
-}, 2000);
-}
-}
-};
+const heroImgs=["images/maycon-1.jpg","maycon-1.jpg"];
+const sideImgs=["images/maycon-2.jpg","maycon-2.jpg"];
+const g3Imgs=["images/maycon-3.jpg","maycon-3.jpg"];
 
-setTimeout(() => {
-const t = document.createElement("script");
-t.src = "https://web-chat.global.assistant.watson.appdomain.cloud/versions/latest/WatsonAssistantChatEntry.js";
-document.head.appendChild(t);
-}, 0);
-</script>
-
-<!-- Imagens + modal -->
-<script>
-const heroImgs = ["images/maycon-1.jpg", "maycon-1.jpg"];
-const sideImgs = ["images/maycon-2.jpg", "maycon-2.jpg"];
-const g3Imgs = ["images/maycon-3.jpg", "maycon-3.jpg"];
-
-function loadImage(id, arr){
-const el = document.getElementById(id);
-let i = 0;
-(function next(){
-if (!el || i >= arr.length) return;
-const test = new Image();
-const url = arr[i++];
-test.onload = () => { el.src = url; };
-test.onerror = next;
-test.src = url;
-})();
-}
-
-loadImage("heroImg", heroImgs);
-loadImage("sideImg", sideImgs);
-loadImage("g1", heroImgs);
-loadImage("g2", sideImgs);
-loadImage("g3", g3Imgs);
-
-// Modal privacidade
-const modal = document.getElementById("privacyModal");
-const backdrop = document.getElementById("modalBackdrop");
-const openBtn = document.getElementById("privacyOpen");
-const closeBtn = document.getElementById("closeModal");
-
-function showModal(){
-if (!modal || !backdrop) return;
-backdrop.style.display = "block";
-modal.style.display = "block";
-}
-
-function hideModal(){
-if (!modal || !backdrop) return;
-backdrop.style.display = "none";
-modal.style.display = "none";
-}
-
-if (openBtn) openBtn.addEventListener("click", showModal);
-if (closeBtn) closeBtn.addEventListener("click", hideModal);
-if (backdrop) backdrop.addEventListener("click", hideModal);
-
-document.addEventListener("keydown", (e) => {
-if (e.key === "Escape") hideModal();
-});
+["heroImg","sideImg","g1","g2","g3"].forEach((id,i)=>{
+  const arr=[heroImgs,sideImgs,g3Imgs][i]||sideImgs;
+  const el=document.getElementById(id);
+  if(!el)return;
+  let x=0;(function next(){if(x>=arr.length)return;
+  const test=new Image();
+  test.onload=()=>el.src=arr[x];test.onerror=next;
+  test.src=arr[x++];})();});
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
 
 
 
