--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <!-- NAV SUPERIOR / ABAS -->
       <nav class="top-nav">
         <a href="#quem">Quem é Maycon Barboza</a>
-        <a href="#como-trabalha">Como trabalha</a>
-        <a href="#modalidades">Modalidades de sessão</a>
-        <a href="#formacao">Formação analítica</a>
+        <a href="#como-trabalha">Como Trabalha</a>
+        <a href="#modalidades">Modalidades de Sessão</a>
+        <a href="#formacao">Formação Analítica</a>
         <a href="#analista-reativo">Analista Reativo</a>
         <a href="https://SUA-LOJA-AQUI" target="_blank" rel="noopener noreferrer">E-books</a>
       </nav>
@@ -321,6 +321,7 @@
   </script>
 </body>
 </html>
+
 
 
 
