--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#modalidades">Modalidades de Sessão</a>
         <a href="#formacao">Formação Analítica</a>
         <a href="#analista-reativo">Analista Reativo</a>
-        <a href="https://https://pay.kiwify.com.br/y0LcvOD" target="_blank" rel="noopener noreferrer">E-books</a>
+        <a href="https://pay.kiwify.com.br/y0LcvOD" target="_blank" rel="noopener noreferrer">E-books</a>
       </nav>
 
       <!-- HERO -->
@@ -321,6 +321,7 @@
   </script>
 </body>
 </html>
+
 
 
 
